--- a/HTML Forms Assessment.html
+++ b/HTML Forms Assessment.html
@@ -4,13 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Front-end foundations: HTML forms</title>
+    <title>HTML Forms Assessment</title>
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      href="style.css"
       rel="stylesheet"
       type="text/css"
-    />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+     />
   </head>
 
   <body>
