--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <main>
       <form>
         <fieldset>
-          <legend>Shipping Information</legend>
           <div>
             <label for="name">Full Name:</label>
             <input
@@ -27,13 +26,12 @@
             />
           </div>
           <div>
-            <label for="location">Zipcode:</label>
+            <label for="email">Email Address:</label>
             <input
-              id="location"
+              id="email address"
               type="text"
-              name="zipcode"
+              name="Email"
               autofocus="on"
-              maxlength="5"
               required
             />
           </div>
@@ -46,7 +44,6 @@
             autofocus="on"
             required
             maxlength="200"
-            placeholder="How can I help you?"
           ></textarea>
         </div>
     </form>
