Change textbox size

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               name="Email"
               autofocus="on"
               required
+              style="font-size: 18pt; height: 40px; width:280px;
             />
           </div>
         <div>
