--- a/index.html
+++ b/index.html
@@ -1,50 +1,173 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>HTML Forms Assessment</title>
+    <title>Vacation Rentals & Unique Homes</title>
     <link
-      href="style.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="stylesheet"
       type="text/css"
-     />
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pangolin&family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
+    <header>
+      <div class="logo">ThinkfulBNB</div>
+      <nav>
+        <ul id="menu">
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
-      <form>
+      <!-- Stay -->
+      <section id="stay">
+        <h2>Find the perfect vacation rental</h2>
+        <!-- Create a form here -->
+        <form>
           <div>
-            <label for="name">Full Name:</label>
+            <label for="location">Location</label>
             <input
-              id="name"
+              id="location"
               type="text"
-              name="name"
-              placeholder="Enter your full name"
-            />
-          </div>
-          <div>
-            <label for="email">Email Address:</label>
-            <input
-              id="email address"
-              type="text"
-              name="Email"
-              autofocus="on"
+              placeholder="Search destination"
               required
             />
           </div>
-        <div>
-          <label for="form-message">Your message:</label>
-          <textarea
-            id="form-message"
-            name="message"
-            autofocus="on"
-            required
-            maxlength="200"
-          ></textarea>
+          <div>
+            <label for="arrive">Arrive</label>
+            <input id="arrive" type="date" name="arrive" min="2021-05-09" />
+          </div>
+          <div>
+            <label for="depart">Depart</label>
+            <input id="depart" type="date" name="depart" min="2021-05-09" />
+          </div>
+          <div>
+            <p class="select">Type</p>
+            <select name="building" size="1">
+              <option value="apartment">Apartment</option>
+              <option value="barn">Barn</option>
+              <option value="castle">Castle</option>
+              <option value="houseboat">Houseboat</option>
+              <option value="tiny-house">Tiny House</option>
+              <option value="yacht">Yacht</option>
+              <option value="yurt">Yurt</option>
+            </select>
+          </div>
+          <div>
+            <button type="submit">Search</button>
+          </div>
+        </form>
+      </section>
+
+      <!-- About -->
+      <section id="about" class="alternate-background">
+        <h2>About</h2>
+        <div class="about-inner-content">
+          <img
+            src="images/vacation-rental-pool.png"
+            alt="Thinkfulbnb - Vacation rental pool"
+          />
+
+          <img
+            src="images/vacation-rental-inside-stone.png"
+            alt="Thinkfulbnb - Vacation rental inside stone"
+          />
+
+          <p>
+            Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+            fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+            porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+            neque, at tempus lorem. Aenean mi magna, posuere at quam sed,
+            euismod gravida neque.
+          </p>
         </div>
-         <button type="submit">Submit</button>
-    </form>
+      </section>
+
+      <!-- Ideas -->
+      <section id="ideas">
+        <h2>Ideas</h2>
+
+        <div class="ideas-container">
+          <div class="forests">
+            <h3>Forest retreats</h3>
+            <img
+              src="images/forest-retreat.png"
+              alt="Thinkfulbnb - Forest retreat"
+            />
+            <img
+              class="invis-mobile"
+              src="images/forest-retreat.png"
+              alt="Thinkfulbnb - Forest retreat"
+            />
+          </div>
+
+          <div class="beaches">
+            <h3>Beaches</h3>
+            <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+            <img
+              class="invis-mobile"
+              src="images/beach-house.png"
+              alt="Thinkfulbnb - Beach house"
+            />
+          </div>
+
+          <div class="rustic-cabins">
+            <h3>Rustic cabins</h3>
+            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+          </div>
+
+          <div class="pet-friendly">
+            <h3>Pet-friendly</h3>
+            <img
+              src="images/pet-friendly.png"
+              alt="Thinkfulbnb - Pet-friendly"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- Host -->
+      <section id="host" class="alternate-background">
+        <div class="host-group">
+          <h2>Want to Become a Thinkfulbnb Host?</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
+            Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
+            pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
+            libero rutrum vitae.
+          </p>
+          <ul>
+            <li>Mauris in pellentesque ligula.</li>
+            <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
+            <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
+            <li>
+              Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.
+            </li>
+            <li>
+              Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce
+              eget hendrerit mauris.
+            </li>
+          </ul>
+        </div>
+        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+      </section>
     </main>
-</body>
+
+    <footer>
+      <p>© Thinkful</p>
+    </footer>
+  </body>
+</html>
